syntax = "proto3";
package dataoutput;

message DataOutputBytesMessage {
  bytes content = 1;
}

message DataOutputStringMessage {
  string content = 1;
}

message DataOutputMessage {
  optional string string_content = 1;
  optional bytes bytes_content = 2;
}

message DataOutputResponse {
  enum DataStoreErrorKind {
    NO_ERROR = 0;
    FATAL_IO = 1;
    DESERIALIZE = 2;
  }
  DataStoreErrorKind error = 1;
  // if no error this should be blank
  optional string content = 2;
}

message DataStoreError {
}

service DataOutput {
  //rpc StringDataOutput(stream DataOutputStringMessage) returns (stream DataOutputResponse) {}
  rpc StringDataOutput(stream DataOutputStringMessage) returns (DataOutputResponse) {}
}

